# virtual_universe

./: .clang-format  CMakeLists.txt  build.bat  build.sh  conanfile.txt
src/: main.cpp
src/file_manager/: file_manager.cpp  file_manager.h
src/shader/: shader.cpp  shader.h
src/shaders/: simple.fs  simple.vs
